--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,6 +28,7 @@
             <ul class="navbar-menu">
                  <li><a href="{{ url_for('home') }}">Início</a></li>
                  <li><a href="{{ url_for('produtos') }}">Produtos</a></li>
+                 <li><a href="{{ url_for('produtores.lista') }}">Produtores</a></li>
                  <li><a href="{{ url_for('sobre') }}">Sobre</a></li>
                  <li><a href="{{ url_for('faq') }}">FAQ</a></li>
                  <li><a href="{{ url_for('contato') }}">Contato</a></li>
