--- a/app/templates/produtos/lista.html
+++ b/app/templates/produtos/lista.html
@@ -1,10 +1,25 @@
 {% extends 'base.html' %}
+
+{% block title %}Produtos{% endblock %}
+
 {% block content %}
-<h2>Produtos</h2>
-<ul>
-  {% for prod in produtos %}
-    <li>{{ prod.nome }} - {{ prod.preco }} <a href="/produtos/editar/{{ prod.id }}">Editar</a></li>
-  {% endfor %}
-</ul>
-<a href="/produtos/novo">Novo Produto</a>
+<div class="container">
+  <h1 class="page-title">Produtos</h1>
+
+  <div class="products-grid">
+    {% for prod in produtos %}
+      <article class="product-card">
+        <h3 class="product-title">{{ prod.nome }}</h3>
+        <div class="price">R$ {{ prod.preco }}</div>
+        <div class="card-actions">
+          <a class="btn btn-ghost" href="/produtos/editar/{{ prod.id }}">Editar</a>
+        </div>
+      </article>
+    {% endfor %}
+  </div>
+
+  <div class="mt-16">
+    <a class="btn btn-primary" href="/produtos/novo">Novo Produto</a>
+  </div>
+</div>
 {% endblock %}
